--- a/index.html
+++ b/index.html
@@ -2,60 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/photo2.png" />
+    <link rel="icon" type="image/png" href="/photo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta
       name="google-site-verification"
       content="ZYNfZwMUiNwSMF3EMvY85bid2BVvB12uMMRfUNWw75A"
     />
+
     <meta
       name="keywords"
-      content="Eki, Eki Zulfar,Eki Zulfar Rachman, siapa Eki, Eki adalah , Siapa Eki Zulfar , ekizr"
+      content="Praful Shinde, Full Stack Developer, Web Developer, Backend Developer, Node.js, React.js, Express.js, MongoDB, TypeScript, Java, Spring Boot, Firebase, AWS"
     />
+
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta
-      name="title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
-    />
+
+    <meta name="title" content="Praful Shinde - Full Stack Developer Portfolio" />
     <meta
       name="description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Welcome to my portfolio! I'm Praful Shinde, a Full Stack Developer specializing in React.js, Node.js, Express.js, MongoDB, TypeScript, Java, Spring Boot, and AWS. Explore my projects and skills here."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://eki.my.id/" />
-    <meta
-      property="og:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
-    />
+    <meta property="og:url" content="https://prafulshinde.dev/" />
+    <meta property="og:title" content="Praful Shinde - Full Stack Developer Portfolio" />
     <meta
       property="og:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Welcome to my portfolio! I'm Praful Shinde, a Full Stack Developer specializing in React.js, Node.js, Express.js, MongoDB, TypeScript, Java, Spring Boot, and AWS. Explore my projects and skills here."
     />
-    <meta property="og:image" content="https://eki.my.id/Meta.png" />
+    <meta property="og:image" content="https://prafulshinde.dev/meta.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://eki.my.id/" />
-    <meta
-      property="twitter:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
-    />
+    <meta property="twitter:url" content="https://prafulshinde.dev/" />
+    <meta property="twitter:title" content="Praful Shinde - Full Stack Developer Portfolio" />
     <meta
       property="twitter:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Welcome to my portfolio! I'm Praful Shinde, a Full Stack Developer specializing in React.js, Node.js, Express.js, MongoDB, TypeScript, Java, Spring Boot, and AWS. Explore my projects and skills here."
     />
-    <meta property="twitter:image" content="https://eki.my.id/Meta.png" />
+    <meta property="twitter:image" content="https://prafulshinde.dev/meta.png" />
+
     <meta name="theme-color" content="rgb(3,0,20)" />
     <meta name="msapplication-navbutton-color" content="rgb(3,0,20)" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <title>Praful Portfolio</title>
+    <title>Praful Shinde Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
